syntax = "proto3";

package  no.mattilsynet.map.email.v1;

option go_package = "github.com/Mattilsynet/map-mailer/gen/go/email/v1;emailv1";
option java_package = "no.mattilsynet.map.email.v1";
option java_multiple_files = true;


import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

message Email {
  Message message = 1;
}

message Message {
  string subject = 1;
  Body body = 2;
  repeated Recipient to_recipients = 3 [json_name = "toRecipients"];
  repeated Recipient cc_recipients = 4 [json_name = "ccRecipients"];
  repeated InternetMessageHeader internet_message_headers = 5 [json_name = "internetMessageHeaders"];
  repeated Attachment attachments = 6;
  Flag flag = 7;
  bool save_to_sent_items = 8 [json_name = "saveToSentItems"];
}

message Body {
  string content_type = 1 [
    json_name = "contentType",
    (buf.validate.field).string = {
    // `in` validates that a string field is one of the values specified.
    // In this case, it validates that content is either "Goodbye.' or 'So long.'.
    in: [
      "Text",
      "HTML"
    ]
  }];
  string content = 2;
}

message Recipient {
  EmailAddress email_address = 1 [json_name = "emailAddress"];
}

message EmailAddress {
  string address = 1 [(buf.validate.field).cel = {
    id: "valid_email",
    message: "email must be a valid email",
    expression: "this.isEmail()"
}];;
}

message Attachment {
  string o_data_type = 1 [json_name = "@odata.type"];
  string name = 2;
  string content_type = 3 [json_name = "contentType"];
  string content_bytes = 4 [json_name = "contentBytes"];
}

message InternetMessageHeader {
  string name = 1;
  string value = 2;
}

message DateTime {
  string date_time = 1 [json_name= "dateTime"];
  string time_zone = 2 [json_name = "timeZone"];
}

message Flag {
  string flag_status = 1 [json_name = "flagStatus"];
  DateTime start_date_time = 2 [json_name = "startDateTime"];
  DateTime due_date_time = 3 [json_name = "dueDateTime"];
}

message Response {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_ERROR = 10;
  }

  Status status = 1 [json_name = "status"];
  google.protobuf.Timestamp time_stamp = 2 [json_name = "timeStamp"];

  string error_message = 5 [json_name = "errorMessage"];

  string stream_name = 10 [json_name = "streamName"];
  uint64 sequence_number = 11 [json_name = "sequenceNumber"];
}